# file_monitor

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  _clang-format  appveyor.yml  conanfile.py  conanfile.txt
.travis/: install.sh
source/: CMakeLists.txt  ChangeList.cpp  ChangeList.hpp  ChangeListFactory.cpp  ChangeListFactory.hpp  MacChangeList.cpp  MacChangeList.hpp  factory.cpp  linux_monitor.cpp  linux_monitor.hpp  mac_monitor.cpp  mac_monitor.hpp  monitor.hpp  win_monitor.cpp  win_monitor.hpp
source/file_monitor/: CMakeLists.txt  debouncer.cpp  debouncer.hpp  factory.cpp  factory.hpp  linux_monitor.cpp  linux_monitor.hpp  mac_monitor.cpp  mac_monitor.hpp  monitor.cpp  monitor.hpp  win_monitor.cpp  win_monitor.hpp
test_package/: conanfile.py  example.cpp
tests/: CMakeLists.txt  integration.cpp  scoped_temp_folder.cpp  scoped_temp_folder.hpp  unit.cpp
